--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -6281,12 +6281,13 @@ input::-webkit-inner-spin-button {
 .productsSet {
   margin: 10px; }
 
-.nav-tabs {
+.nav-tabs > li.active > a {
   color: #fff;
-  background-color: #337777; }
+  background-color: #337ab7; }
 
-.nav-tabs:active {
-  background-color: #000; }
+.nav-tabs > li > a {
+  color: #fff;
+  background-color: #98bfe4; }
 
 ul {
   list-style: none;
@@ -6303,8 +6304,7 @@ ul {
 
 div.centerDiv {
   width: 100%;
-  text-align: center;
-  border: 1px solid red; }
+  text-align: center; }
 
 ul.superImpFeatures {
   margin: 2px auto;
